<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pittsburgh311</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="information">Register</string>
    <string name="guest">File Report</string>
    <string name="setup">Quick Information Setup</string>
    <string name="title_activity_information">Information</string>
    <string name="title_activity_image_capture">ImageCapture</string>
    <string name="making_comments">Report Comments</string>
    <string name="submit">Submit</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="home_address">Home Address</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="info_setup">Quick Information Setup</string>

    <string name="topic_prompt">Choose a topic</string>
    <string name="confirmation">Submission complete!</string>
    <string name="home_button">Main Menu</string>
    <string name="twitter_toast">Successfully posted to Twitter!</string>
    <string name="facebook_toast">Successfully shared on Facebook!</string>
    <string name="create_button">Create</string>


    <string-array name="topic_arrays">
        <item>Abandoned Vehicles</item>
        <item>Animal Care &amp; Control</item>
        <item>Building Violation or Problem</item>
        <item>City Tree</item>
        <item>Concern - issue or policy</item>
        <item>Dumping</item>
        <item>Graffiti</item>
        <item>Meter</item>
        <item>Other</item>
        <item>Overgrowth - Private Property</item>
        <item>Overgrowth - Public Property</item>
        <item>Parking</item>
        <item>Police or Public Safety</item>
        <item>Potholes</item>
        <item>Refuse Problem</item>
        <item>Sewer or Catch Basin</item>
        <item>Sidewalk (Needs repair)</item>
        <item>Sidewalk-Snow covered only</item>
        <item>Sign - Replacement</item>
        <item>Sign - Request for New Signage</item>
        <item>Snow &amp; Ice control</item>
        <item>Street Cleaning</item>
        <item>Street Light</item>
        <item>Street Paving Request</item>
        <item>Traffic</item>
    </string-array>

</resources>
