<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_centerInParent="true"
        android:layout_above="@id/information_button"
        android:layout_marginBottom="65dp"
        android:textSize="@dimen/abc_action_bar_title_text_size"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/information_button"
        android:text="@string/information"/>

    <Button
        android:id="@+id/guest_button"
        android:text="@string/guest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/information_button"
        android:layout_marginTop="45dp"
        android:layout_centerVertical="true"
        android:layout_centerInParent="true"/>

</RelativeLayout>